# noesis

./: .gitignore  .npmrc  AGENTS.md  ANGULAR_LLMSTXT_IMPORT.md  CHANGELOG.md  CODEBASE.md  COPILOT-WORKFLOW.md  Dockerfile  LICENSE  PHASE2-COPILOT-SKILL.md  README.md  ROADMAP.md  SETUP.md  biome.json  cliff.toml  drizzle.config.ts  masstransit-crawl-run.md  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vitest.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.opencode/: opencode.jsonc
crawler/: Dockerfile  package-lock.json  package.json
docs/: ui.md
drizzle/: 0000_boring_guardian.sql
embedder/: Dockerfile  main.py  pyproject.toml  requirements.txt  test_embedder.py
embedder/src/noesis_embedder/: env.py  main.py
embedder/src/noesis_embedder/events/: __init__.py  embed_completed.py  start_embed_job.py
embedder/src/noesis_embedder/logging/: logging.py
embedder/src/noesis_embedder/messages/: __init__.py  broker.py  handler.py  message.py  registry.py
embedder/src/noesis_embedder/providers/: huggingface.py
embedder/src/noesis_embedder/repo_analyzer/: __init__.py  chunker.py  code_embedder.py  code_parser.py
embedder/src/noesis_embedder/routes/: __init__.py  repo_analyzer_routes.py
embedder/tests/: test_health.py
infra/: README.md  build.ps1  build.sh  docker-compose.yml
scripts/: import-angular-llms-full.ps1  import-angular-llms-full.sh  test-docker.ps1  test-docker.sh
server/: .editorconfig  .gitignore  Contexteur.slnx  Directory.Build.props  Directory.Packages.props  Gravion.Contexteur.sln.DotSettings  Gravion.Noesis.slnx  (+3 more)
(+637 files in other folders)
