[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/noesis_embedder"]

[project]
name = "noesis-embedder"
version = "0.1.0"
description = "Noesis embedding worker — generates pgvector embeddings for indexed documentation chunks"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "httpx>=0.28",
    "openai>=1.82",
    "pgvector>=0.4",
    "psycopg2-binary>=2.9",
    "pydantic-settings>=2.9",
    "uvicorn[standard]>=0.34",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
